making proj my own

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3-build-with-ssg",
+  "name": "Project name in json file",
   "version": "1.0.0",
   "description": "",
   "main": "vibe.js",
