--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "axios": "^0.19.2",
-    "dotenv": "^8.2.0",
-    "getenv": "^1.0.0"
+    "dotenv": "^8.2.0"
   }
 }
