--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc-5-localized-news-master",
+  "name": "staticsg-1",
   "version": "1.0.0",
   "description": "",
   "main": "vibe.js",
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy": "^0.11.0",
     "axios": "^0.19.2",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "getenv": "^1.0.0"
   }
 }
